--- a/ui/style.css
+++ b/ui/style.css
@@ -19,4 +19,12 @@ body {
 .img-medium {
     height: 200px;
 }
-
+.container{
+                font-family:cursive;
+                color:#555555;
+                max-width:800px;
+                margin:0 auto;
+                padding-top:100px;
+                padding-left:20px;
+                padding-right:20px;
+}
