[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -21,7 +21,7 @@ body {
 }
 .container{
                 font-family:cursive;
-                color:#555555;
+                color:white;
                 max-width:800px;
                 margin:0 auto;
                 padding-left:20px;
